--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PDFPT</title>
+    <title>BinaryTalkHub</title>
   </head>
   <body class="font-poppins">
     <div id="root"></div>
