--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BinaryTalkHub</title>
   </head>
-  <body class="font-poppins">
+  <body class="font-rubik">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
